--- a/chart.html
+++ b/chart.html
@@ -4,91 +4,130 @@
 <title>Page to test Graphics</title>
 </head>
 <style>
+    chart {
+        --caption-area: 1.5rem;
+        --footer-area: 20px;
 
-    .chart {
-        aspect-ratio: 16/9;
-        display: grid;
-        grid-template-rows: 97% 3%;
-        grid-template-columns: 3% 97%;
-        align-items: end;
-        overflow: hidden;
-        background-color: lightgray;
-    }
+        display: block;
+        box-sizing: border-box;
+        container-type: inline-size;
+        background-color: transparent;
 
-    .xaxis {
-        height: 100%;
-        grid-area: -2 / 1 / -2 / -1;
-        background-color: blue;
-    }
+        & * { box-sizing: border-box; }
 
-    .yaxis {
-        height: 100%;
-        grid-area: 1 / 1 / 1 / 2;
-        background-color: cyan;
-    }
-
-    .bar-chart {
-        --line-width: 1px;
-        --line-spacing: calc(100% / var(--line-count));
-        --line-color: grey;
-        --line-count: 10;
-
-        height: 100%;
-        grid-area: 1 / 2 / 1 / -1;
-
-        background-image: repeating-linear-gradient(
-            to top,
-            transparent 0 calc(var(--line-spacing) - var(--line-width)),
-            var(--line-color) 0 var(--line-spacing));
-
-        display: flex;
-        flex-direction: row;
-        align-items: flex-end;
-
-        div {
-            flex: 1;
+        table {
+            display: grid;
+            grid-template-rows: var(--caption-area) 1fr var(--footer-area);
+            aspect-ratio: 16/9;
         }
-    }
 
-    .bar-chart div {
-        background-color: #FF3403;
-        border-left: 1px solid white;
-        border-right: 1px solid white;
-        height: 45%;
+        caption {
+            grid-area: 1 / 1 / 2 / 2;
+            display: block;
+            font-size: 12px;
+        }
 
-        &:hover {
-            background-color: green;
-            height: 75%;
+        thead {
+            grid-area: 1 / 1 / 3 / 2;
+            align-items: end;
+            color: grey;
+            display: grid;
+            grid-template-rows: var(--caption-area);
+            grid-auto-rows: 1fr;
+
+            tr {
+                display: contents;
+            }
+
+            th {
+                font-size: 10px;
+                font-weight: 600;
+                text-align: start;
+                border-block-end: 1px solid grey;
+                display: inline grid;
+            }
+        }
+
+        tbody {
+            grid-area: 2 / 1 / 3 / 2;
+            container-type: size;
+            display: grid;
+            grid-auto-flow: column;
+            grid-auto-columns: 1fr;
+            padding-inline: 3rem 0;
+
+            tr {
+                display: contents;
+            }
+
+            td {
+                --value: attr(value, 0);
+                background: #FF3403;
+                grid-row: 1 / -1;
+                align-self: end;
+
+                &:hover {
+                    background-color: green;
+                }
+            }
+        }
+
+        tfoot {
+            grid-area: 3 / 1 / 4 / 2;
         }
     }
 
 </style>
 <body>
-<div class="chart">
-    <div class="xaxis"></div>
-    <div class="yaxis"></div>
-    <div class="bar-chart">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-</div>
+<chart max=15>
+    <table>
+        <caption>Truffle Chances</caption>
+        <thead>
+            <tr>
+                <th>15%</th>
+            </tr>
+            <tr>
+                <th></th>
+            </tr>
+            <tr>
+                <th>10%</th>
+            </tr>
+            <tr>
+                <th></th>
+            </tr>
+            <tr>
+                <th>5%</th>
+            </tr>
+            <tr>
+                <th></th>
+            </tr>
+            <tr>
+                <th>0%</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td style="height:25%"></td>
+            </tr>
+            <tr>
+                <td style="height:40%"></td>
+            </tr>
+            <tr>
+                <td style="height:55%"></td>
+            </tr>
+            <tr>
+                <td style="height:45%"></td>
+            </tr>
+            <tr>
+                <td style="height:30%"></td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+        </tfoot>
+
+    </table>
+</chart>
 </body>
 </html>
