--- a/chart.html
+++ b/chart.html
@@ -6,7 +6,7 @@
 <style>
     chart {
         --caption-area: 1.5rem;
-        --footer-area: 20px;
+        --footer-area: 1.5rem;
 
         display: block;
         box-sizing: border-box;
@@ -24,7 +24,7 @@
         caption {
             grid-area: 1 / 1 / 2 / 2;
             display: block;
-            font-size: 12px;
+            font-size: 1rem;
         }
 
         thead {
@@ -40,7 +40,7 @@
             }
 
             th {
-                font-size: 10px;
+                font-size: 0.75rem;
                 font-weight: 600;
                 text-align: start;
                 border-block-end: 1px solid grey;
@@ -49,7 +49,7 @@
         }
 
         tbody {
-            grid-area: 2 / 1 / 3 / 2;
+            grid-area: 2 / 1 / 4 / 2;
             container-type: size;
             display: grid;
             grid-auto-flow: column;
@@ -57,40 +57,35 @@
             padding-inline: 3rem 0;
 
             tr {
-                display: contents;
-            }
-
-            td {
-                --value: attr(value, 0);
-                background: #FF3403;
-                grid-row: 1 / -1;
-                align-self: end;
-
-                &:hover {
-                    background-color: green;
-                }
-            }
-        }
-
-        tfoot {
-            grid-area: 3 / 1 / 4 / 2;
-            padding-inline: 3rem 0;
-
-            align-items: start;
-            color: grey;
-            display: grid;
-            grid-auto-flow: column;
-            grid-auto-columns: 1fr;
-
-            tr {
-                display: contents;
-                border-block-start: 1px solid grey;
+                align-items: end;
+                display: grid;
+                overflow-inline: clip;
+                grid-template-rows: 1fr var(--footer-area);
             }
 
             th {
-                font-size: 10px;
+                grid-area: 2 / 1 / 3 / 2;
+                color: grey;
+                border-block-start: 4px solid black;
+                font-size: 1rem;
                 font-weight: 600;
-                text-align: center;
+                height: var(--footer-area);
+                place-content: center;
+                display: inline grid;
+                visibility: hidden;
+
+                &:has(+ td:hover) {
+                    visibility: visible;
+                }
+            }
+
+            td {
+                grid-area: 1 / 1 / 2 / 2;
+                background: beige;
+
+                &:hover {
+                    background-color: blue;
+                }
             }
         }
     }
@@ -126,39 +121,26 @@
 
         <tbody>
             <tr>
+                <th>25</th>
                 <td style="height:25%"></td>
             </tr>
             <tr>
+                <th>26</th>
                 <td style="height:40%"></td>
             </tr>
             <tr>
+                <th>27</th>
                 <td style="height:55%"></td>
             </tr>
             <tr>
+                <th>28</th>
                 <td style="height:45%"></td>
             </tr>
             <tr>
+                <th>29</th>
                 <td style="height:30%"></td>
             </tr>
         </tbody>
-
-        <tfoot>
-            <tr>
-                <th>25</th>
-            </tr>
-            <tr>
-                <th>26</th>
-            </tr>
-            <tr>
-                <th>27</th>
-            </tr>
-            <tr>
-                <th>28</th>
-            </tr>
-            <tr>
-                <th>29</th>
-            </tr>
-        </tfoot>
     </table>
 </chart>
 </body>
