--- a/chart.html
+++ b/chart.html
@@ -18,7 +18,9 @@
         table {
             display: grid;
             grid-template-rows: var(--caption-area) 1fr var(--footer-area);
-            aspect-ratio: 16/9;
+            height: 100%;
+            max-height: 225px;
+            max-width: 450px;
         }
 
         caption {
@@ -66,7 +68,7 @@
             th {
                 grid-area: 2 / 1 / 3 / 2;
                 color: grey;
-                border-block-start: 4px solid black;
+                border-block-start: 2px solid black;
                 font-size: 1rem;
                 font-weight: 600;
                 height: var(--footer-area);
@@ -84,7 +86,7 @@
                 background: beige;
 
                 &:hover {
-                    background-color: blue;
+                    background-color: brown;
                 }
             }
         }
