--- a/chart.html
+++ b/chart.html
@@ -7,11 +7,12 @@
     chart {
         --caption-area: 1.5rem;
         --footer-area: 1.5rem;
+        --ui-colour: grey;
 
-        display: block;
+        background-color: transparent;
         box-sizing: border-box;
         container-type: inline-size;
-        background-color: transparent;
+        display: block;
 
         & * { box-sizing: border-box; }
 
@@ -30,71 +31,71 @@
         }
 
         thead {
-            grid-area: 1 / 1 / 3 / 2;
             align-items: end;
-            color: grey;
+            color: var(--ui-colour);
             display: grid;
-            grid-template-rows: var(--caption-area);
+            grid-area: 1 / 1 / 3 / 2;
             grid-auto-rows: 1fr;
+            grid-template-rows: var(--caption-area);
 
             tr {
                 display: contents;
             }
 
             th {
+                border-block-end: 1px solid var(--ui-colour);
+                display: inline grid;
                 font-size: 0.75rem;
                 font-weight: 600;
                 text-align: start;
-                border-block-end: 1px solid grey;
-                display: inline grid;
             }
         }
 
         tbody {
-            grid-area: 2 / 1 / 4 / 2;
             container-type: size;
             display: grid;
             grid-auto-flow: column;
-            grid-auto-columns: 1fr;
-            padding-inline: 3rem 0;
+            grid-auto-columns: minmax(0, 1fr);
+            grid-area: 2 / 1 / 4 / 2;
+            padding-inline: 1.5rem 0;
 
             tr {
                 align-items: end;
                 display: grid;
-                overflow-inline: clip;
                 grid-template-rows: 1fr var(--footer-area);
             }
 
             th {
-                grid-area: 2 / 1 / 3 / 2;
-                color: grey;
-                border-block-start: 2px solid black;
+                border-block-start: 2px solid var(--ui-colour);
+                color: var(--ui-colour);
+                display: none;
                 font-size: 1rem;
                 font-weight: 600;
+                grid-area: 2 / 1 / 3 / 2;
                 height: var(--footer-area);
+                min-width: 0;
+                overflow: visible;
                 place-content: center;
-                display: inline grid;
-                visibility: hidden;
+                text-align: center;
 
                 &:has(+ td:hover) {
-                    visibility: visible;
+                    display: inline grid;
                 }
             }
 
             td {
-                grid-area: 1 / 1 / 2 / 2;
                 background: beige;
+                grid-area: 1 / 1 / 2 / 2;
 
                 &:hover {
-                    background-color: brown;
+                    background-color: blue;
                 }
             }
         }
     }
-
 </style>
 <body>
-<chart>
+<div class="chart">
     <table>
         <caption>Truffle Chances</caption>
         <thead>
@@ -142,8 +143,32 @@
                 <th>29</th>
                 <td style="height:30%"></td>
             </tr>
+            <tr><th>150000</th><td style="height:100%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
+            <tr><th>15</th><td style="height:50%"></td></tr>
         </tbody>
     </table>
-</chart>
+</div>
 </body>
 </html>
